--- a/index.html
+++ b/index.html
@@ -9,41 +9,26 @@
 <body>
 
 
-<div class="nav-container">
-   <div class="wrapper">
-       <nav>
-           <div class="logo">
-              DQA 
-           </div>
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-           <ul class="nav-items">
-               <li>
-                   <a href="#">about</a>
-               </li>
-               <li>
-                   <a href="#">work</a>
-               </li>
-               <li>
-                   <a href="#">contact</a>
-               </li>
-               <li>
-                   <a href="#">resume</a>
-               </li>
-           </ul>
-       </nav>
-   </div>
+<div class="topnav" id="myTopnav">
+  <a href="#">about</a>
+  <a href="#">work</a>
+  <a href="#">contact</a>
+  <a href="#">resume</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
 
 <div class="header-container">
-    <div class="wrapper">
         <header>
             <div class="hero-content">
+
                 <h1>Hello, I am Dianna!</h1>
                 <p>
                     I am a junior user researcher and experience designer with a background in public health systems, based out of Phoenix, AZ.
-                </p>
-                <p>
-                    I am currently working at a tech start-up as a product manager and leading a team that is creating a system to manage COVID-19 vaccine at the state/county level.
                 </p>
             </div>
             <div class="hero-image"></div>
@@ -52,7 +37,6 @@
 </div>
 
 <div class="header-container2">
-    <div class="wrapper">
         <header>
             <div class="hero-content">
                 <h1>Skills</h1>
@@ -68,29 +52,40 @@
     </div>
 </div>
 
+
 <div class="header-container3">
-    <div class="wrapper">
         <header>
             <div class="hero-content">
                 <h1>My Work</h1>
             </div>
         </header>
     </div>
-    <div id="container">
-        <div class="block">
-            Compa App
+   
+<div>
+    <div class="card">
+        <img src="#" alt="#" style="width:100%">
+        <div class="container">
+          <h4><b>into the wilderness website</b></h4>
+          <p>non-profit website</p>
         </div>
-        <div class="block">
-            Menti App
-        </div>
-        <div class="block">
-            Into the Wilderness Website
-        </div>
+  </div>
+  <div class="card">
+    <img src="#" alt="#" style="width:100%">
+    <div class="container">
+      <h4><b>into the wilderness website</b></h4>
+      <p>non-profit website</p>
     </div>
+</div>
+<div class="card">
+    <img src="#" alt="#" style="width:100%">
+    <div class="container">
+      <h4><b>into the wilderness website</b></h4>
+      <p>non-profit website</p>
+    </div>
+</div>
 </div>
 
 <div class="footer-container">
-    <div class="wrapper">
         <nav>
             <ul class="footer-items">
                 <li>
